--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -25,7 +25,7 @@
 
   {% if site.codepen_username != null %}
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
-    href="https://codepen.io/{{site.codepen_username}}">
+    href="https://app.hackthebox.com/{{site.codepen_username}}">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#codepen" | prepend: site.baseurl }}"></use>
@@ -36,10 +36,10 @@
 
   {% if site.dev_username != null %}
   <a class="social-link black" aria-label="My DEV" target="_blank" rel="noreferrer"
-    href="https://dev.to/{{site.dev_username}}">
+    href="https://www.thequbit.net{{site.dev_username}}">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
-        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#dev" | prepend: site.baseurl }}"></use>
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#blogger" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
   </a>
