--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -23,7 +23,7 @@
   </a>
   {% endif %}
 
-  {% if site.codepen = null %}
+  {% if site.codepen = True %}
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
     href="http://home.thequbit.net{{site.codepen}}">
     <div class="social">
