--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -23,9 +23,9 @@
   </a>
   {% endif %}
 
-  {% if site.codepen = True %}
+  {% if site.codepen_username != null %}
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
-    href="http://home.thequbit.net{{site.codepen}}">
+    href="https://app.hackthebox.com/{{site.codepen_username}}">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#home" | prepend: site.baseurl }}"></use>
