--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,6 +1,6 @@
 <div id="landing">
   <div class="landing-title">
-    <h1>Hola, soy
+    <h1>Hola! 👋, soy
       <span class="highlight-title">{{site.username}}</span>,
     </h1>
     <h1>
