--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -17,7 +17,7 @@
     href="https://github.com/{{site.github_username}}">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
-        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#github" | prepend: site.baseurl }}"></use>
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#phone" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
   </a>
