--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -28,7 +28,7 @@
     href="https://app.hackthebox.com/{{site.codepen_username}}">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
-        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#location-arrow" | prepend: site.baseurl }}"></use>
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#map-pin" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
   </a>
