--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -12,16 +12,16 @@
   </a>
   {% endif %}
 
-  {% if site.github_username != null %}
+<!--  {% if site.github_username != null %} href="https://github.com/{{site.github_username}}"-->
   <a class="social-link" aria-label="My GitHub" target="_blank" rel="noreferrer"
-    href="https://github.com/{{site.github_username}}">
+    href="https://wa.me/680000000">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#phone" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
   </a>
-  {% endif %}
+  <!--{% endif %}-->
 
   {% if site.codepen_username != null %}
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
