--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -25,7 +25,7 @@
 
 <!--  {% if site.codepen_username != null %}href="https://app.hackthebox.com/{{site.codepen_username}}-->
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
-    href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3038.2384143837985!2d-3.759035923121897!3d40.4035688714418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd41880eff678765%3A0xb23590d9a20ac8de!2sC.%20de%20San%20Juan%20de%20Mata%2C%203%2C%20Latina%2C%2028011%20Madrid!5e0!3m2!1ses!2ses!4v1725774084629!5m2!1ses!2ses">
+    href=https://maps.app.goo.gl/vmwLsJMV2p2Dem6Z7">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#map-marked" | prepend: site.baseurl }}"></use>
