--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -25,7 +25,7 @@
 
 <!--  {% if site.codepen_username != null %}href="https://app.hackthebox.com/{{site.codepen_username}}-->
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
-    href=https://maps.app.goo.gl/vmwLsJMV2p2Dem6Z7">
+    href="https://maps.app.goo.gl/vmwLsJMV2p2Dem6Z7">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#map-marked" | prepend: site.baseurl }}"></use>
