--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -34,16 +34,16 @@
   </a>
 <!--  {% endif %}-->
 
-  {% if site.dev_username != null %}
+<!--  {% if site.dev_username != null %}"https://www.thequbit.net{{site.dev_username}}"-->
   <a class="social-link black" aria-label="My DEV" target="_blank" rel="noreferrer"
-    href="https://www.thequbit.net{{site.dev_username}}">
+    href="https://mega.nz/file/DAxiBI7D#NJKyKTA3rGItQd8RTgSWHaGhW6K19qsM7Hxp0BFcQXQ">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
-        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#blogger" | prepend: site.baseurl }}"></use>
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#file-pdf" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
   </a>
-  {% endif %}
+<!--  {% endif %}-->
 
   {% if site.linkedin_username != null %}
   <a class="social-link linkedin" aria-label="My LinkedIn" target="_blank" rel="noreferrer"
@@ -58,10 +58,10 @@
 
   {% if site.twitter_username != null %}
   <a class="social-link twitter" aria-label="My Twitter" target="_blank" rel="noreferrer"
-    href="https://twitter.com/{{site.twitter_username}}">
+    href="https://www.thequbit.net{{site.twitter_username}}">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
-        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#twitter" | prepend: site.baseurl }}"></use>
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#blogger" | prepend: site.baseurl }}"></use>
       </svg>
     </div>
   </a>
