--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -105,4 +105,5 @@
       {% endif %}
     </div>
   </div>
+  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
