--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -36,7 +36,7 @@
 
 <!--  {% if site.dev_username != null %}"https://www.thequbit.net{{site.dev_username}}"-->
   <a class="social-link black" aria-label="My DEV" target="_blank" rel="noreferrer"
-    href="https://mega.nz/file/DAxiBI7D#NJKyKTA3rGItQd8RTgSWHaGhW6K19qsM7Hxp0BFcQXQ">
+    href="https://q3it.github.io/neumorphism/docs/CV.pdf">
     <div class="social">
       <svg class="social-svg" viewBox="0 0 48 48">
         <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/solid.svg#file-pdf" | prepend: site.baseurl }}"></use>
