--- a/_includes/section-projects.html
+++ b/_includes/section-projects.html
@@ -70,9 +70,9 @@
           </div>
           <p class="project-desc">{{repository.description}}</p>
           {% if repository.homepage != "" and repository.homepage != nil %}
-            <a class="highlight-link" href="{{repository.homepage}}" target="_blank" rel="noreferrer">
+           <!-- <a class="highlight-link" href="{{repository.homepage}}" target="_blank" rel="noreferrer">
               Demo
-            </a>
+            </a> -->
           {% endif %}
           <a class="highlight-link" href="{{repository.html_url}}" target="_blank" rel="noreferrer">
             Github
