--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <p>
-    &copy; 2020 Designed & Developed by
+    &copy; 2024 Diego Bedoya | Inspired by
     <a class="highlight-link" href="https://longpdo.github.io/" target="_blank" rel="noreferrer">
       Long Do
     </a>
