--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
 </head>
 
 <body>
+  <label for="contraseña">Contraseña</label>
+  <input id="contraseña" type="password">
   <div id="preloader">
     <div class="load">
       <hr />
